Rename to docstamp

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 envlist = py27
 
 [testenv:py27]
-commands = py.test pydger --cov pydger --pep8
-deps = 
+commands = py.test docstamp --cov docstamp --pep8
+deps =
        pytest
        pytest-cov
        pytest-pep8
