--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,28 @@
-# http://editorconfig.org
-
 root = true
 
 [*.py]
-indent_style = space
-indent_size = 4
+end_of_line = lf
+charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-charset = utf-8
-end_of_line = lf
+indent_style = space
+indent_size = 4
 
-[*.bat]
-indent_style = tab
-end_of_line = crlf
+[*.yml]
+indent_style = space
+indent_size = 2
 
-[LICENSE]
-insert_final_newline = false
+[*.sh]
+indent_style = space
+indent_size = 4
 
 [Makefile]
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = false
 indent_style = tab
+
+[*.md]
+trim_trailing_whitespace = false
+insert_final_newline = false
