--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,73 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[cod]
-*.csv
-
-#temp files
-*~
 
 # C extensions
 *.so
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+target/
+*.egg-info/
 .installed.cfg
-lib
-lib64
-__pycache__
+*.egg
+.venv/
+Pipfile.lock
+.pytest_cache/
+
+# PyInstaller
+# Usually these files are written by a python script from a template
+# before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
 # Installer logs
 pip-log.txt
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+htmlcov/
+.tox/
 .coverage
-.tox
+.cache
 nosetests.xml
+coverage.xml
 
 # Translations
 *.mo
+*.pot
 
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+# Django stuff:
+*.log
 
-#PyCharm
-.idea
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+#Temporal files
+*~
+
+#PyCharm Project
+.idea/
+
+#reference code
+devdoc/
+
+.DS_Store
+.vscode
+.ropeproject/
+*~
+*#
+*retry
