--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,23 @@ universal=1
 norecursedirs = .git _build tmp*
 #addopts = --cov-config .
 addopts = --maxfail=2 -rf
+
+[flake8]
+max-line-length = 120
+exclude = **/__init__.py, **/gen_esp32part.py
+
+[pycodestyle]
+max-line-length = 120
+
+[bumpversion]
+current_version = 0.4.0
+commit = True
+tag = False
+
+[bumpversion:file:docstamp/version.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
+
+[bumpversion:file:setup.py]
+search = version="{current_version}",
+replace = version="{new_version}",
