:wrench: change bumpversion settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 current_version = 0.4.1
 commit = True
 tag = False
+message = :bookmark: Bump version: {current_version} → {new_version}
 
 [bdist_wheel]
 universal = 1
@@ -24,4 +25,3 @@ replace = __version__ = '{new_version}'
 [bumpversion:file:setup.py]
 search = version="{current_version}",
 replace = version="{new_version}",
-
