--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,10 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+[*.cfg]
+indent_style = space
+indent_size = 2
+
 [*.sh]
 indent_style = space
 indent_size = 4
