fix(CLI): fix setup to install the docstamp CLI

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,54 +10,54 @@ version = attr: docstamp.version.__version__
 description = A SVG and LateX template renderer from table data based on Inkscape and Jinja2
 long_description = file: README.md
 long_description_content_type = text/markdown
-project_urls = 
-	Documentation = https://github.com/PythonSanSebastian/docstamp/blob/master/README.md
-	Source Code = https://github.com/PythonSanSebastian/docstamp
-	Bug Tracker = https://github.com/PythonSanSebastian/docstamp/issues
-	Changelog = https://github.com/PythonSanSebastian/docstamp/blob/master/CHANGELOG.md
+project_urls =
+    Documentation = https://github.com/PythonSanSebastian/docstamp/blob/master/README.md
+    Source Code = https://github.com/PythonSanSebastian/docstamp
+    Bug Tracker = https://github.com/PythonSanSebastian/docstamp/issues
+    Changelog = https://github.com/PythonSanSebastian/docstamp/blob/master/CHANGELOG.md
 author = Alexandre M. Savio
 author_email = info@pyss.org
 license = Apache License Version 2.0
 license-file = LICENSE
-keywords = 
-	svg
-	latex
-	template
-	jinja2
-	inkscape
-	badge
-	document
-	render
-classifiers = 
-	Development Status :: 4 - Beta
-	Environment :: Other Environment
-	Intended Audience :: Developers
-	License :: OSI Approved :: Apache Software License
-	Programming Language :: Python :: 3
-	Programming Language :: Python :: 3.6
-	Programming Language :: Python :: 3.7
+keywords =
+    svg
+    latex
+    template
+    jinja2
+    inkscape
+    badge
+    document
+    render
+classifiers =
+    Development Status :: 4 - Beta
+    Environment :: Other Environment
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
 
 [options]
 python_requires = >=3.6
 packages = find:
 include_package_data = True
-setup_requires = 
-	wheel
-	setuptools
-install_requires = 
-	Pillow>=6.1.0
-	jinja2>=2.10
-	PyPDF2>=1.26.0
-	qrcode>=6.1
-	svgutils==0.3.1
-	click>=7.0
-scripts = 
-	scripts/svg_export.py
-	scripts/embed_font_to_svg.py
+setup_requires =
+    wheel
+    setuptools
+install_requires =
+    Pillow>=6.1.0
+    jinja2>=2.10
+    PyPDF2>=1.26.0
+    qrcode>=6.1
+    svgutils==0.3.1
+    click>=7.0
+scripts =
+    scripts/svg_export.py
+    scripts/embed_font_to_svg.py
 
-[entry_points]
-console_scripts = 
-	docstamp = docstamp.cli:cli
+[options.entry_points]
+console_scripts =
+    docstamp = docstamp.cli.cli:cli
 
 [flake8]
 max-line-length = 120
@@ -85,29 +85,29 @@ ignore_missing_imports = True
 warn_unused_configs = True
 
 [tox:tox]
-envlist = 
-	lint,
-	isort,
-	mypy,
+envlist =
+    lint,
+    isort,
+    mypy,
 skipsdist = True
 
 [testenv]
 basepython = python3
 whitelist_externals = make
-deps = 
-	lint: flake8
-	lint: flake8-bugbear
-	isort: isort
-	mypy: mypy
-passenv = 
-	CI = 1
-setenv = 
-	PYTHONPATH = {toxinidir}:{toxinidir}
-	TESTING = True
-commands = 
-	lint: flake8 docstamp
-	isort: isort -c -rc docstamp
-	mypy: mypy docstamp
+deps =
+    lint: flake8
+    lint: flake8-bugbear
+    isort: isort
+    mypy: mypy
+passenv =
+    CI = 1
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}
+    TESTING = True
+commands =
+    lint: flake8 docstamp
+    isort: isort -c -rc docstamp
+    mypy: mypy docstamp
 
 [bdist_wheel]
 universal = 1
