--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"e1839a8" = {editable = true, path = "."}
+e1839a8 = {editable = true,path = "."}
 
 [dev-packages]
 flake8 = "*"
@@ -22,3 +22,4 @@ tox = ">=3.13.2"
 rope = "*"
 twine = "*"
 tox-pipenv-install = "*"
+bumpversion = "*"
